@@ -28,6 +28,8 @@ Version 1.7.5
        fetch new items. (Stefan)
 - BUG: Issue #205: Long urls fail to
        checkout/export. (Stefan)
+- BUG: Issue #206: Scroll problem in
+       TortoiseMerge. (Stefan)
 
 Version 1.7.4
 - BUG: Issue #169: Error "Access to 
